Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event__e/fields/Base_Object__c.field-meta.xml
<CustomField>
    <fullName>Base_Object__c</fullName>
    <label>Base Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>