Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event__e/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>