Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event__e/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>Base Object&apos;s record Instance Id</description>
    <label>Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>