Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event__e/fields/Subscriber_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Code__c</fullName>
    <label>Subscriber Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>