Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event__e/fields/Triggering_Action__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Action__c</fullName>
    <description>Insert, Update, Delete, Undelete</description>
    <label>Triggering Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>